[gd_scene load_steps=5 format=3 uid="uid://omgmvljwsp7k"]

[ext_resource type="Script" path="res://Scripts/ui.gd" id="1_g6pix"]
[ext_resource type="FontFile" uid="uid://d370phyelf2v8" path="res://Assets/font/font.otf" id="2_4iock"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0cb82"]
bg_color = Color(0.807843, 0.0156863, 0.0666667, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pw02l"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_g6pix")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="HealthContainer" type="HBoxContainer" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="WaveCounter" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_4iock")
theme_override_font_sizes/font_size = 32
text = "Wave 1 of 2"

[node name="BossHealthBar" type="ProgressBar" parent="MarginContainer"]
visible = false
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
size_flags_vertical = 8
theme_override_styles/fill = SubResource("StyleBoxFlat_0cb82")
value = 22.0
show_percentage = false

[node name="BossName" type="Label" parent="MarginContainer"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_fonts/font = ExtResource("2_4iock")
text = "VLAD"

[node name="GameOverContainer" type="CenterContainer" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="Panel" type="Panel" parent="MarginContainer/GameOverContainer"]
custom_minimum_size = Vector2(200, 200)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_pw02l")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/GameOverContainer/Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="MarginContainer/GameOverContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4iock")
text = "YOU WON!"

[node name="Button" type="Button" parent="MarginContainer/GameOverContainer/Panel/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_4iock")
text = "RESTART"

[connection signal="pressed" from="MarginContainer/GameOverContainer/Panel/VBoxContainer/Button" to="." method="_on_button_pressed"]
